Lab1/Code/syntax.output
Terminals unused in grammar

   digit
   integer
   letter
   SPACE
   TAB
   LINEBREAK


State 30 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 75 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | error RC

   15 OptTag: ID
   16       | /* empty */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error RC

   29 StmtList: Stmt StmtList
   30         | /* empty */

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI
   38     | error RP

   39 DefList: Def DefList
   40        | /* empty */

   41 Def: Specifier DecList SEMI
   42    | error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | Exp LB error RB
   66    | error RP

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 20 23 28 37 38 42 65 66
digit (258)
integer (259)
letter (260)
SPACE (261)
TAB (262)
LINEBREAK (263)
INT (264) 19 63
FLOAT (265) 64
ID (266) 15 17 18 21 22 58 59 61 62
TYPE (267) 10
ASSIGNOP (268) 46 47
AND (269) 48
OR (270) 49
RELOP (271) 50
PLUS (272) 51
MINUS (273) 52 56
STAR (274) 53
DIV (275) 54
NOT (276) 57
DOT (277) 61
LP (278) 21 22 34 35 36 55 58 59
RP (279) 21 22 23 34 35 36 38 55 58 59 66
LB (280) 19 60 65
RB (281) 19 20 60 65
LC (282) 12 27
RC (283) 12 14 27 28
COMMA (284) 9 24 44 67
SEMI (285) 4 5 7 31 33 37 41 42
WHILE (286) 36
IF (287) 34 35
ELSE (288) 35
STRUCT (289) 12 13
RETURN (290) 33
LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Program (38)
    on left: 1, on right: 0
ExtDefList (39)
    on left: 2 3, on right: 1 2
ExtDef (40)
    on left: 4 5 6 7, on right: 2
ExtDecList (41)
    on left: 8 9, on right: 4 9
Specifier (42)
    on left: 10 11, on right: 4 5 6 26 41
StructSpecifier (43)
    on left: 12 13 14, on right: 11
OptTag (44)
    on left: 15 16, on right: 12
Tag (45)
    on left: 17, on right: 13
VarDec (46)
    on left: 18 19 20, on right: 8 9 19 26 45 46
FunDec (47)
    on left: 21 22 23, on right: 6
VarList (48)
    on left: 24 25, on right: 21 24
ParamDec (49)
    on left: 26, on right: 24 25
CompSt (50)
    on left: 27 28, on right: 6 32
StmtList (51)
    on left: 29 30, on right: 27 29
Stmt (52)
    on left: 31 32 33 34 35 36 37 38, on right: 29 34 35 36
DefList (53)
    on left: 39 40, on right: 12 27 39
Def (54)
    on left: 41 42, on right: 39
DecList (55)
    on left: 43 44, on right: 41 44
Dec (56)
    on left: 45 46, on right: 43 44
Exp (57)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66, on right: 31 33 34 35 36 46 47 48 49 50 51 52 53 54 55 56
    57 60 61 65 67 68
Args (58)
    on left: 67 68, on right: 58 67


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    7 ExtDef: error . SEMI
   14 StructSpecifier: error . RC

    RC    shift, and go to state 9
    SEMI  shift, and go to state 10


state 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


state 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 11

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


state 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


state 9

   14 StructSpecifier: error RC .

    $default  reduce using rule 14 (StructSpecifier)


state 10

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


state 11

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


state 12

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


state 13

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


state 14

    0 $accept: Program $end .

    $default  accept


state 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 16

   20 VarDec: error . RB
   23 FunDec: error . RP

    RP  shift, and go to state 23
    RB  shift, and go to state 24


state 17

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 25

    $default  reduce using rule 18 (VarDec)


state 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


state 20

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 27
    COMMA  shift, and go to state 28

    $default  reduce using rule 8 (ExtDecList)


state 21

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


state 22

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 40 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


state 23

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


state 24

   20 VarDec: error RB .

    $default  reduce using rule 20 (VarDec)


state 25

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    RP      shift, and go to state 37
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


state 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 27

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 41


state 28

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 42
    ID     shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 20


state 29

   28 CompSt: error . RC

    RC  shift, and go to state 45


state 30

   27 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 40 (DefList)]
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 35


state 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 32

   14 StructSpecifier: error . RC
   42 Def: error . SEMI

    RC    shift, and go to state 9
    SEMI  shift, and go to state 47


state 33

   41 Def: Specifier . DecList SEMI

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


state 34

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


state 35

   39 DefList: Def . DefList

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 40 (DefList)]
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 35


state 36

   14 StructSpecifier: error . RC

    RC  shift, and go to state 9


state 37

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


state 38

   26 ParamDec: Specifier . VarDec

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec  go to state 53


state 39

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


state 40

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 25 (VarList)


state 41

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


state 42

   20 VarDec: error . RB

    RB  shift, and go to state 24


state 43

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 44

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 45

   28 CompSt: error RC .

    $default  reduce using rule 28 (CompSt)


state 46

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 30
    WHILE   shift, and go to state 64
    IF      shift, and go to state 65
    RETURN  shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


state 47

   42 Def: error SEMI .

    $default  reduce using rule 42 (Def)


state 48

   19 VarDec: VarDec . LB INT RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 27

    $default  reduce using rule 45 (Dec)


state 49

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


state 50

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 43 (DecList)


state 51

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


state 52

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


state 53

   19 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 26 (ParamDec)


state 54

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


state 55

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 40


state 56

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 57

   28 CompSt: error . RC
   37 Stmt: error . SEMI
   38     | error . RP
   66 Exp: error . RP

    RP    shift, and go to state 75
    RC    shift, and go to state 45
    SEMI  shift, and go to state 76


state 58

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


state 59

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


state 60

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 62 (Exp)


state 61

   56 Exp: MINUS . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 79


state 62

   57 Exp: NOT . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 80


state 63

   55 Exp: LP . Exp RP

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 81


state 64

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 82


state 65

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


state 66

   33 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 84


state 67

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


state 68

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


state 69

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 30
    WHILE   shift, and go to state 64
    IF      shift, and go to state 65
    RETURN  shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 86
    Stmt      go to state 69
    Exp       go to state 70


state 70

   31 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96
    SEMI      shift, and go to state 97


state 71

   46 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 98


state 72

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


state 73

   44 DecList: Dec COMMA . DecList

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec   go to state 48
    DecList  go to state 99
    Dec      go to state 50


state 74

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


state 75

   38 Stmt: error RP .
   66 Exp: error RP .

    ASSIGNOP  reduce using rule 66 (Exp)
    AND       reduce using rule 66 (Exp)
    OR        reduce using rule 66 (Exp)
    RELOP     reduce using rule 66 (Exp)
    PLUS      reduce using rule 66 (Exp)
    MINUS     reduce using rule 38 (Stmt)
    MINUS     [reduce using rule 66 (Exp)]
    STAR      reduce using rule 66 (Exp)
    DIV       reduce using rule 66 (Exp)
    DOT       reduce using rule 66 (Exp)
    LB        reduce using rule 66 (Exp)
    SEMI      reduce using rule 66 (Exp)
    $default  reduce using rule 38 (Stmt)


state 76

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


state 77

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 100

    Exp   go to state 101
    Args  go to state 102


state 78

   66 Exp: error . RP

    RP  shift, and go to state 103


state 79

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    DOT   shift, and go to state 95
    LB    shift, and go to state 96

    $default  reduce using rule 56 (Exp)


state 80

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 57 (Exp)


state 81
